# py-cutter

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/.github/: pr-template.md
{{cookiecutter.project_slug}}/.github/workflows/: pr.workflow.yaml
{{cookiecutter.project_slug}}/entrypoints/: entrypoint.jupyter-lab.sh  entrypoint.{{cookiecutter.project_slug}}.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_src_dir}}/: __init__.py  main.py
